welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:6: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:11: error: too many arguments for method droite: ()Unit
  poseBiscuit();droite(2)
                      ^