welcome.lessons.welcome.summative.Moria.scala.code
def chercher_buggle(){
  while(!estSurBiscuit()){
    avance()
  }
  prendBiscuit();
  droite(2)
  while(!estSurBiscuit()){
    avance()
  }
  recule();
  poseBiscuit();droite(2)
}

chercher_buggle()